# AndroidGameEngine

./: .gitignore  settings.gradle
app/: CMakeLists.txt  build.gradle
app/jni/: Application.mk  CMakeLists.txt
app/jni/SDL2/src/hidapi/android/: hid.cpp
app/jni/src/: Android.mk  CMakeLists.txt  Core.h
app/jni/src/Application/: Application.cpp  Application.h  Timestep.h  Window.cpp  Window.h  main.cpp
app/jni/src/Application/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
app/jni/src/Application/Filesystem/: Filesystem.cpp  Filesystem.h
app/jni/src/Application/ImGui/: ImGuiBuild.cpp
app/jni/src/Application/Input/: Input.cpp  Input.h
app/jni/src/Application/Layers/: ApplicationLayer.cpp  ApplicationLayer.h  ImGuiLayer.cpp  ImGuiLayer.h  Layer.cpp  Layer.h
app/jni/src/Application/Layers/ApplicationLayer/: AssetManagerPanel.cpp  AssetManagerPanel.h  ImGuiRenderer.cpp  VisualScriptingEditor.cpp  VisualScriptingEditor.h
app/jni/src/Application/Settings/: Language.cpp  Language.h  Settings.cpp  Settings.h
app/jni/src/Application/UI/: UIUtility.h
app/jni/src/Objects/: Object.cpp  Object.h
app/jni/src/Rendering/: Framebuffer.cpp  Framebuffer.h  Renderer.cpp  Renderer.h
app/jni/src/Rendering/Buffers/: BufferLayout.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
app/jni/src/Rendering/Camera/: OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h
app/jni/src/Rendering/Shaders/: Shader.cpp  Shader.h
app/jni/src/Rendering/Texture2D/: Texture2D.cpp  Texture2D.h  TextureCache.cpp  TextureCache.h  TextureLoader.cpp  TextureLoader.h
app/jni/src/VisualScripting/: CodeGraph.cpp  CodeGraph.h  Link.h  Node.cpp  Node.h  NodeRegistry.cpp  NodeRegistry.h
app/jni/src/VisualScripting/Nodes/: EventNodes.cpp  EventNodes.h  IfNode.cpp  IfNode.h  VariableNode.cpp  VariableNode.h
app/jni/src/imgui/: CMakeLists.txt
app/jni/src/imgui/backends/: imgui_impl_sdl.cpp
app/src/androidTest/java/com/example/gameengine/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: quad_frag.glsl  quad_vert.glsl
app/src/main/assets/lang/: en.json  sv.json
app/src/main/assets/shaders/: quad_frag.glsl
app/src/main/cpp/main/: Android.cpp  Android.h  Application.cpp  Application.h  EntryPoint.cpp  Kernel.cpp  Kernel.h  MainApp.cpp  MainApp.h  MainTask.cpp  MainTask.h  Task.h  Timer.cpp  Timer.h
app/src/main/cpp/rendering/: BasicShader.cpp  BasicShader.h  Geometry.cpp  Geometry.h  Renderable.cpp  Renderable.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
app/src/main/java/com/engine/test/: GameActivity.java
app/src/main/res/values/: icon_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/gameengine/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
